# Denga

./: .dockerignore  .env.example  .gitignore  .ignore  README.md  docker-compose.dev.yml  docker-compose.migrate.yml  docker-compose.node.yml  docker-compose.python.yml  docker-compose.yml  package-lock.json  package.json  tsconfig.base.json
apps/python_backend/: Dockerfile  pyproject.toml
apps/python_backend/alembic/: env.py
apps/python_backend/alembic/versions/: 20260414_01_baseline_schema.py  20260419_01_transaction_edit_sessions.py
apps/python_backend/app/: ai_adapter.py  api.py  config.py  database.py  dependencies.py  jobs.py  logging_utils.py  models.py  observability.py  schemas.py  security.py  services_core.py  services_runtime.py  summary.py  telegram_adapter.py  telegram_helpers.py  telegram_stats.py  telegram_stats_renderer.py  telegram_types.py  worker.py  workflows.py
apps/python_backend/app/architecture/: __init__.py
apps/python_backend/app/domain/: __init__.py  draft_state.py  job_policy.py
apps/python_backend/denga_python_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/python_backend/scripts/: bootstrap_seed.py  migrate.py  verify_contract.py  verify_invariants.py
apps/python_backend/tests/: test_alembic_baseline.py  test_api_contract.py  test_architecture.py  test_database.py  test_draft_repository.py  test_draft_state.py  test_job_repository.py  test_migrate_script.py  test_notifications.py  test_scheduled_backup.py  test_stats_and_polling.py  test_summary.py  test_telegram_adapter.py  test_telegram_helpers.py  test_telegram_stats.py  test_telegram_workflows.py  test_transaction_edit_repository.py  test_worker.py
(+186 files in other folders)
