[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "denga-python-backend"
version = "0.1.0"
description = "FastAPI + worker backend for Denga"
requires-python = ">=3.12"
dependencies = [
  "alembic==1.17.1",
  "bcrypt==4.0.1",
  "email-validator==2.3.0",
  "fastapi==0.135.3",
  "httpx==0.28.1",
  "Pillow==12.2.0",
  "passlib[bcrypt]==1.7.4",
  "psycopg[binary]==3.3.3",
  "pydantic-settings==2.13.1",
  "PyJWT==2.12.1",
  "python-dotenv==1.1.0",
  "sqlalchemy==2.0.49",
  "uvicorn[standard]==0.44.0",
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
